# Autonomus_Research_Platform

./: .env.example  .gitignore  AI_Quantum_Platform_PRODUCTION_v2.md  API_EXTENSION_GUIDE.md  Dockerfile  Makefile  README.md  analyze_run.py  docker-compose.yml  pyproject.toml  requirements.txt  test.py
scripts/: clean_experiments.py  run_tests.sh  start_server.sh
src/: __init__.py
src/agents/: __init__.py  base_agent.py  clarifier_agent.py  code_gen_agent.py  dataset_agent.py  doc_generator_agent.py  env_manager_agent.py  error_recovery_agent.py  evaluator_agent.py  job_scheduler_agent.py  planner_agent.py  quantum_gate.py
src/api/: app.py  dependencies.py  middleware.py  router.py
src/config/: settings.py
src/core/: __init__.py  action_validator.py  chat_assistant.py  execution_mode.py  file_manager.py  history_scope.py  local_actions.py  logger.py  logging.py  package_installer.py  phase_validator.py  prompt_domain.py  rl_feedback.py  security.py  state_compressor.py  subprocess_runner.py  user_behavior.py  webhooks.py
src/db/: database.py  models.py  repository.py
src/graph/: __init__.py  builder.py  routers.py  runner.py
src/llm/: dynamic_parser.py  master_llm.py  quantum_llm.py  response_parser.py
src/prompts/: __init__.py  clarifier.py  code_gen.py  dataset_agent.py  doc_generator.py  env_manager.py  error_recovery.py  evaluator.py  job_scheduler.py  planner.py  quantum_llm.py  registry.py
src/schemas/: request_schemas.py  response_schemas.py
src/state/: __init__.py  research_state.py
tests/: conftest.py
tests/test_graph/: test_routing.py  (+2 more)
(+20 files in other folders)
